header > navigation > changement padding because bug on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ p
 #navigation li a
 {
 	display: block;
-	padding: 40px 25px 44px;
+	padding: 40px 19px 44px;
 	margin: 0 26px;
 	font-size: 19px;
 }
